# memory-star-mvp

./: .env.example  .gitignore  BIGTECH_ANALYSIS.md  CHANGELOG.md  GITHUB_PUSH_GUIDE.md  MOBILE_GUIDE.md  PILOT_PLAN.md  README.md  VOICE_README.md  demo.py  industry_research_report.md  push-to-github.sh  pyproject.toml  requirements.txt  voice_demo.py
memory_star/: __init__.py  voice.py
memory_star/core/: __init__.py  chat_engine.py  memoir_writer.py  question_generator.py
memory_star/utils/: audio_handler.py
utils/: __init__.py
