[project]
name = "memory-star-mvp"
version = "0.1.0"
description = "AI辅助老年人回忆录撰写平台 - MVP版本"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "google-generativeai>=0.8.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "sounddevice>=0.4.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.setuptools]
packages = ["memory_star"]

[tool.uv]
python-downloads = "automatic"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
